Fix input drop with scrollbars

--- a/content/themes/dude/sass/layout/_chat.scss
+++ b/content/themes/dude/sass/layout/_chat.scss
@@ -108,7 +108,7 @@
 // @link https://github.com/SaraSoueidan/creative-list-effects/blob/master/css/styles-4.css
 
 .removed-item {
-  animation: removed-item-animation .4s cubic-bezier(.55, -0.04, .91, .94) forwards;
+  animation: removed-item-animation .4s cubic-bezier(.55, -.04, .91, .94) forwards;
 }
 
 @keyframes removed-item-animation {
