--- a/content/themes/dude/sass/views/_merch.scss
+++ b/content/themes/dude/sass/views/_merch.scss
@@ -205,6 +205,12 @@
   z-index: 9999;
 }
 
+.simpay-modal,
+.simpay-modal__body,
+.simpay-modal__content {
+  overflow: hidden !important;
+}
+
 .simpay-modal-control-open {
   display: none;
 }
